[package]
name = "eth-demo-api"
version = "0.1.0"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
web3 = "0.16.0"
hex = "0.4"
log = "0.4"
env_logger = "0.8"
dotenv = "0.15"
